[package]
name = "susybtc"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Susytech <admin@superstring.ch>", "Paritytech <admin@parity.io>"]
description = "Susy bitcoin client."

[dependencies]
log = {version="0.4",registry="susytech"}
env_logger = {version="0.5",registry="susytech"}
app_dirs = { git = "https://octonion.institute/susytech/app-dirs-rs" }
libc = {version="0.2",registry="susytech"}
clap = { version = "2", features = ["yaml"] }
chain = { path = "chain" }
keys = { path = "keys" }
message = { path = "message" }
network = { path = "network" }
miner = { path = "miner" }
p2p = { path = "p2p" }
script = { path = "script" }
storage = { path = "storage" }
db = { path = "db" }
verification = { path = "verification" }
sync = { path = "sync" }
import = { path = "import" }
logs = { path = "logs" }
rpc = { path = "rpc" }
primitives = { path = "primitives" }

[profile.dev]
debug = true
panic = 'abort'

[profile.release]
debug = true
panic = 'abort'

[profile.test]
debug = true

[[bin]]
path = "susybtc/main.rs"
name = "susybtc"

[workspace]
members = ["bencher"]
