[package]
name = "keys"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]

[dependencies]
rand = {version="0.4",registry="susytech"}
rustc-hex = "2"
lazy_static = {version="1.0",registry="susytech"}
base58 = "0.1"
sof-secp256k1 = { git = "https://github.com/sofcore/susy-secp256k1" }
bitcrypto = { path = "../crypto" }
primitives = { path = "../primitives" }
