[package]
name = "sync"
version = "0.1.0"
authors = ["Sofcore <admin@sofcore.io>"]

[dependencies]
parking_lot = "0.4"
log = {version="0.4",registry="susytech"}
time = {version="0.1",registry="susytech"}
futures = {version = "0.1",registry="susytech"}
linked-hash-map = "0.3"
bit-vec = "0.4.3"
murmur3 = "0.4"
rand = {version="0.4",registry="susytech"}
byteorder = {version="1.0", registry="susytech"}

chain = { path = "../chain" }
bitcrypto = { path = "../crypto" }
storage = { path = "../storage" }
db = { path = "../db" }
message = { path = "../message" }
miner = { path = "../miner" }
p2p = { path = "../p2p" }
primitives = { path = "../primitives" }
script = { path = "../script" }
serialization = { path = "../serialization" }
verification = { path = "../verification" }
network = { path = "../network" }

[dev-dependencies]
test-data = { path = "../test-data" }
miner = { path = "../miner", features = ["test-helpers"] }
chain = { path = "../chain", features = ["test-helpers"] }
